--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <center><h1>Memory-Cards</h1>
         <div id="actions">
         <h1>Score: <span id="score"> </span></h1>
-        <button onclick="restart()">Restart</button>
+        <h1>Time: <span id="time"> </span></h1>
+        <button onclick="restart()">restart</button>
     </div></center>
     <hr>
     <div id="cards">
